IMPLEMENTADO BUSCAR HQS NA API E COMEÇANDO ESTILIZAÇÂO / FILTRAGEM

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     -->
     <title>Marvel Store</title>
   </head>
-  <body>
+  <body style="margin: 0; font-family: Arial, Helvetica, sans-serif">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
